# convergence-os

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  WARP.md  eslint.config.mjs  package.json  pnpm-lock.yaml  prettier.config.mjs  sonar-project.properties  tsconfig.json  turbo.jsonc  typedoc.json
.github/workflows/: chromatic.yml  ci.yml  sonarqube.yml
.husky/: pre-commit
.turbo/cache/: 0540a132af847714-meta.json  0540a132af847714.tar.zst  0827f0a72775ab15-meta.json  10f261351aa735e4-meta.json  1f4d58ce83bb8a2b-meta.json  3797febe5a63148c-meta.json  3d4b36f747e9aed9-meta.json  44157a46987a218b-meta.json  44157a46987a218b.tar.zst  45b65fdd2eabac94-meta.json  45b65fdd2eabac94.tar.zst  59dc225902f1e14c-meta.json  6e554a8c821ac182-meta.json  72e0984e7082864b-meta.json  72e0984e7082864b.tar.zst  b9d324169d7225d6-meta.json  b9d324169d7225d6.tar.zst  d2b99477001b0431-meta.json  d2b99477001b0431.tar.zst  db72610d829ba359-meta.json  db72610d829ba359.tar.zst  dd2ddc7b35a1c7b8-meta.json  dd2ddc7b35a1c7b8.tar.zst  e9e0dd9e0588599c-meta.json  e9e0dd9e0588599c.tar.zst  f60de03417350dd9-meta.json  f60de03417350dd9.tar.zst
Moodboard Creation Tool/: README.md  index.html  package.json
Moodboard Creation Tool/src/: App.tsx  index.css
Moodboard Creation Tool/src/components/: ColorPalette.tsx  ComposeModal.tsx  DraggableImage.tsx  EmailDetail.tsx  EmailList.tsx  ImageLibrary.tsx  MoodboardCanvas.tsx  Sidebar.tsx  ThemeToggle.tsx  TopBar.tsx  emailStore.ts  store.ts
Moodboard Creation Tool/src/styles/: globals.css
apps/storybook/: chromatic.config.json  eslint.config.mjs  package.json  postcss.config.mjs  tsconfig.json  vitest.config.ts
apps/storybook/.storybook/: main.ts  manager-head.html  manager.tsx  preview.ts
apps/storybook/src/__tests__/context/: ThemeContext.test.tsx
apps/storybook/src/__tests__/pages/: _app.test.tsx  _document.test.tsx  index.test.tsx
apps/storybook/src/context/: ThemeContext.tsx
apps/storybook/src/pages/: _app.tsx  _document.tsx  index.tsx
apps/storybook/src/pages/api/: hello.ts
apps/storybook/src/stories/: Avatar.stories.tsx  Badge.stories.tsx  Button.docs.mdx  Button.stories.ts  Button.stories.tsx  Button.tsx  Card.stories.tsx  Colors.mdx  Introduction.mdx  Table.stories.tsx  button.css
apps/storybook/src/styles/: globals.css  themes.css  themes.css.backup  themes.css.ff527be
apps/web/: eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  tsconfig.json
apps/web/.next/: BUILD_ID  build-manifest.json  fallback-build-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  trace  trace-build
apps/web/.next/cache/: .previewinfo  .rscinfo
apps/web/.next/server/: middleware-build-manifest.js  server-reference-manifest.js  server-reference-manifest.json
apps/web/e2e/: components.spec.ts  theme.spec.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
docs/: Makefile  conf.py  index.rst  requirements.txt
docs/_static/: custom.css  custom.css.backup
docs/explanation/: architecture.rst  index.rst
docs/how-to/: index.rst
docs/reference/: index.rst
docs/reference/api/: index.rst  ml-service.rst
docs/tutorials/: getting-started.rst  index.rst
scripts/: sonarqube-report.ts
services/ml/: .pre-commit-config.yaml  README.md  coverage-fixed.xml  coverage.xml.bak  poetry.toml  pyproject.toml
services/ml/src/convergence_ml/: __init__.py  __main.__.py
services/ml/src/convergence_ml/api/: __init__.py  app.py  deps.py
services/ml/src/convergence_ml/api/routers/: __init__.py  classification.py  embeddings.py  health.py  highlights.py
services/ml/src/convergence_ml/core/: __init__.py  config.py  logging.py
services/ml/src/convergence_ml/db/: __init__.py  models.py  vector_store.py
services/ml/src/convergence_ml/models/: __init__.py  sentence_transformer.py  spacy_pipeline.py
services/ml/src/convergence_ml/models/classifiers/: __init__.py  base.py  content_type.py  spam.py
services/ml/src/convergence_ml/schemas/: __init__.py  classification.py  common.py  embeddings.py  highlights.py
services/ml/src/convergence_ml/services/: __init__.py  classification_service.py  embedding_service.py  highlight_service.py  similarity_service.py
services/ml/src/convergence_ml/utils/: __init__.py  email_parser.py  text_preprocessing.py
services/ml/tests/: __init__.py  conftest.py
services/ml/tests/fixtures/: __init__.py
services/ml/tests/integration/: __init__.py  test_embedding_service.py
services/ml/tests/unit/: __init__.py  test_api_routers.py  test_classification_service.py  test_content_type_classifier.py  test_email_parser.py  test_highlight_service.py  test_sentence_transformer.py  test_similarity_service.py  test_spacy_pipeline.py  test_spam_classifier.py  test_text_preprocessing.py  test_vector_store.py
tooling/eslint/: base.js  library.js  nextjs.js  package.json  react.js  storybook.js
tooling/prettier/: config.js  package.json
tooling/tailwind/: globals.css  package.json  tsconfig.json
tooling/tailwind/themes/: convergence.css  synthwave.css
tooling/typescript/: base.json  nextjs.json  package.json
(+94 files in other folders)
