[project]
name = "convergence-ml"
version = "0.1.0"
description = "Machine learning package to enhance the ConvergenceOS experience."
authors = [
    {name = "David Dunnock",email = "dunnoda@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "fastapi (>=0.122.1,<0.123.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "sentence-transformers (>=5.1.2,<6.0.0)",
    "spacy (>=3.8.11,<4.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pgvector (>=0.4.1,<0.5.0)",
    "httpx (>=0.28.1,<0.29.0)",
    # Logging
    "structlog (>=24.4.0,<25.0.0)",
    # Text preprocessing
    "email-validator (>=2.2.0,<3.0.0)",
    "beautifulsoup4 (>=4.12.0,<5.0.0)",
    # Model serialization
    "joblib (>=1.4.0,<2.0.0)",
]

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "ruff (>=0.14.7,<0.15.0)",
    "mypy (>=1.19.0,<2.0.0)",
    "pre-commit (>=4.5.0,<5.0.0)",
    # Docstring checking
    "pydocstyle (>=6.3.0,<7.0.0)",
    # Security checking
    "bandit (>=1.7.0,<2.0.0)",
    # Documentation
    "sphinx (>=8.0.0,<9.0.0)",
    "sphinx-autodoc-typehints (>=3.0.0,<4.0.0)",
]
gpu = ["torch>=2.6.1"]

[project.scripts]
convergence-ml = "convergence_ml.__main__:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=convergence_ml --cov-report=term-missing"

[tool.mypy]
python_version = "3.12"
namespace_packages = true
files = ["src/convergence_ml"]
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "sentence_transformers.*",
    "spacy.*",
    "sklearn.*",
    "structlog.*",
    "bs4.*",
    "joblib.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "D",      # pydocstyle - docstring checks
    "S",      # flake8-bandit - security checks
]

ignore = [
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "D107",   # Missing docstring in __init__
    "D203",   # 1 blank line required before class docstring (conflicts with D211)
    "D213",   # Multi-line docstring summary should start at the second line (conflicts with D212)
    "S101",   # Use of assert detected (acceptable in tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D", "S101"]  # Don't require docstrings in tests, allow assert

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pydocstyle]
convention = "google"
add_ignore = ["D100", "D104", "D107"]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]

